--- a/wellenbrecher/Cargo.toml
+++ b/wellenbrecher/Cargo.toml
@@ -18,6 +18,7 @@ clap.workspace = true
 shared_memory.workspace = true
 
 nftables = "0.2.4"
+os_pipe = "1.1.4"
 
 socket2 = "0.5.5"
 io-uring = "0.6.2"
@@ -26,3 +27,10 @@ core_affinity = "0.8.1"
 bytemuck = "1.14.0"
 bytemuck_derive = "1.5.0"
 smallvec = "1.11.2"
+
+tokio = { version = "1.34.0", features = ["rt", "net", "macros", "signal", "io-util", "sync", "time"] }
+tokio-util = "0.7.10"
+tokio-pipe = "0.2.12"
+
+paste = "1.0.14"
+ctrlc = "3.4.1"
