--- a/seebruecke/Cargo.toml
+++ b/seebruecke/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wellenbrecher-viewer"
+name = "seebruecke"
 version = "0.1.0"
 edition = "2021"
 authors = ["bits0rcerer <25325997+bits0rcerer@users.noreply.github.com>"]
