--- a/seebruecke/Cargo.toml
+++ b/seebruecke/Cargo.toml
@@ -3,6 +3,7 @@ name = "seebruecke"
 version = "0.1.0"
 edition = "2021"
 authors = ["bits0rcerer <25325997+bits0rcerer@users.noreply.github.com>"]
+license = 'GPL-3'
 
 resolver = "2"
 
