--- a/kanal/Cargo.toml
+++ b/kanal/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 authors = ["bits0rcerer <25325997+bits0rcerer@users.noreply.github.com>"]
 license = 'GPL-3'
+repository = "https://github.com/bits0rcerer/wellenbrecher"
 
 resolver = "2"
 
@@ -14,5 +15,3 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 eyre.workspace = true
 clap.workspace = true
-
-gstreamer = "0.21.2"
