--- a/wellenbrecher-canvas/Cargo.toml
+++ b/wellenbrecher-canvas/Cargo.toml
@@ -3,6 +3,7 @@ name = "wellenbrecher-canvas"
 version = "0.1.0"
 edition = "2021"
 license = 'GPL-3'
+repository = "https://github.com/bits0rcerer/wellenbrecher"
 
 resolver = "2"
 
