--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,6 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 eyre = "0.6.9"
 thiserror = "1.0.50"
 
-clap = { version = "4.4.8", features = ["derive"] }
+clap = { version = "4.4.8", features = ["derive", "env"] }
 
 shared_memory = "0.12.4"
