--- a/gst-wellenbrecher-src/Cargo.toml
+++ b/gst-wellenbrecher-src/Cargo.toml
@@ -14,6 +14,8 @@ gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/g
 gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 
+once_cell = "1.19.0"
+
 [lib]
 name = "wbsrc"
 crate-type = ["cdylib"]
